--- a/site/index.html
+++ b/site/index.html
@@ -104,6 +104,7 @@
       }
       main {
         width: 90vw;
+        max-width: 700px;
         margin: 0 auto;
         padding-top: 40px;
       }
