Starting to add header and alt text for images

--- a/site/index.html
+++ b/site/index.html
@@ -82,16 +82,16 @@
       sizes="180x180"
       href="/favicons/180x180.png"
     />
-
     <style>
       body {
-        background-color: black;
+        background-color: #111;
         color: white;
         margin: 0;
         padding: 0;
         min-height: 100vh;
         display: grid;
         grid-template-rows: auto 1fr auto;
+        font-size: 1.2rem;
       }
       header {
         padding-top: 18px;
@@ -99,14 +99,19 @@
         width: 100%;
         max-width: 64ch;
         margin: 0 auto;
-        border-bottom: 1px solid #888;
-        text-align: center;
       }
       main {
         width: 90vw;
-        max-width: 700px;
+        max-width: 1200px;
         margin: 0 auto;
         padding-top: 40px;
+      }
+      @media (max-width: 900px) {
+        main {
+          width: 98vw;
+          margin: 0 auto;
+          padding-top: 40px;
+        }
       }
       footer {
         width: 100%;
@@ -119,6 +124,8 @@
       }
       a {
         text-decoration: none;
+        color: white;
+        font-weight: bold;
       }
       .image {
         width: 100%;
@@ -138,37 +145,61 @@
       <a href="https://www.alanwsmith.com/">alanwsmith.com</a> ~
       <a href="https://links.alanwsmith.com">links</a> ~
       <a href="https://podcast.alanwsmith.com/">podcast</a>
+      <hr />
+      <p>
+        In Nov. 2017 I had my first full-blown manic episode. For two weeks, I
+        ran around my house naked recording audio and video and taking notes
+        about my plans to fix the world.
+      </p>
+      <p>
+        One of the things that happens during a manic episode is &quot;pressure
+        to talk&quot;. With all my recording gear, there was nothing to stop me.
+        I kept going and going and going. These notes were an attempt to stop
+        talking and let my brain slow down.
+      </p>
+      <p>
+        This is not a cohesive, edited piece. It&apos;s not something crafted
+        for a movie sequence. It the raw scribblings of someone in the throws of
+        mania. If you&apos;re interested in seeing what that looks like, this is
+        it.
+      </p>
     </header>
     <main>
       <div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-1.png"
+            alt="[NOTE: there are lots of scribbling and odd breaks in the text that is hard to describe in alt text. Weird breaks are not unexpected] Text: Ahhh... The iPad. Apple Pencil, thank god fo ryou (see right now, I'm thinking about y'all). Ummm... Things. deep breath (then an scratch image where I attempt to draw a stick figure breathing out). There's an 'In 2, 3, 4' box at the bottom"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-2.png"
+            alt="There's an Out, 2, 3, 4 in a box at the top of the image which connects to the In, 2, 3, 4 from the prior image. Text:What if we don't use numbers (with an arrow pointing to the Out, 2, 3, 4 box). But (ding) represents bell of yeah... self awareness. - Okay. This is fun and all, but Imma do this without y'all"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-3.png"
+            alt="Text: watching (and then the words for the res with a line through them) - I'll probably make a few notes. On the right side is a box with 'This is helping me slow down' on it. [There's an arrow pointing down to text at the bottom that says]. Not that line specifically but the relative"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-4.png"
+            alt="turning off the shower because [drawing of a bell with the word ding next to it and the word bell with an arrow pointing to the drawing] but I'm standing up so it's hard to write [a word that looks like 'write' is scratched out]"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-5.png"
+            alt="well. my hand writing is shit even when I'm sitting down. [scratched out text 'So I don't have a way' with lines drawn above and below] - [a few words are scribbled out on the side of the page] - See, I didn't have to decide on that word for me. I had to decide on it for the audience."
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-6.png"
+            alt="[an arrow coming from the top of the image pointing to the first line] - But, [scratched out word] It took [horizontal line] - [scratched out: OK I'm gonna try to keep] - OK: For the purposes of [horizontal line] [scratched out: This wou] - This would have helped [horizontal line] - Oh: New Thing. I was about to decrease [continued on next page]"
           />
         </div>
         <div class="image">
