Updated intro and added more alt tags

--- a/site/index.html
+++ b/site/index.html
@@ -85,7 +85,7 @@
     <style>
       body {
         background-color: #111;
-        color: white;
+        color: #bbd3d3;
         margin: 0;
         padding: 0;
         min-height: 100vh;
@@ -124,7 +124,7 @@
       }
       a {
         text-decoration: none;
-        color: white;
+        color: #bbd3d3;
         font-weight: bold;
       }
       .image {
@@ -147,21 +147,15 @@
       <a href="https://podcast.alanwsmith.com/">podcast</a>
       <hr />
       <p>
-        In Nov. 2017 I had my first full-blown manic episode. For two weeks, I
+        In Nov. 2017, I had a full-blown bipolar manic episode. For two weeks, I
         ran around my house naked recording audio and video and taking notes
-        about my plans to fix the world.
-      </p>
-      <p>
-        One of the things that happens during a manic episode is &quot;pressure
-        to talk&quot;. With all my recording gear, there was nothing to stop me.
-        I kept going and going and going. These notes were an attempt to stop
-        talking and let my brain slow down.
+        about my plans to fix the world. These are a few of the notes.
       </p>
       <p>
         This is not a cohesive, edited piece. It&apos;s not something crafted
         for a movie sequence. It the raw scribblings of someone in the throws of
-        mania. If you&apos;re interested in seeing what that looks like, this is
-        it.
+        mania. If you&apos;re interested in seeing what that really looks like,
+        this is it.
       </p>
     </header>
     <main>
@@ -199,178 +193,212 @@
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-6.png"
-            alt="[an arrow coming from the top of the image pointing to the first line] - But, [scratched out word] It took [horizontal line] - [scratched out: OK I'm gonna try to keep] - OK: For the purposes of [horizontal line] [scratched out: This wou] - This would have helped [horizontal line] - Oh: New Thing. I was about to decrease [continued on next page]"
+            alt="[an arrow coming from the top of the image pointing to the first line] - But, [scratched out word] It took [horizontal line] - [scratched out: OK I'm gonna try to keep] - OK: For the purposes of [horizontal line] [scratched out: This wou] - This would have helped [horizontal line] - Oh: New Thing. I was about to decrease the size"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-7.png"
+            alt="[a box at the top with: That'll make sense in the video.] - [A horizontal line] - [scratched out words: Because I] - So: my mouth can [scratched out word: allmost with four 'l's] keep up w/ my brain. But, [scratched out like only] - like it falls behind a bit sometimes. [An arrow pointing to the word sometimes] - [the words 'Awareness Low' in the bottom corner with a yellow highlight over it]"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-8.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-9.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-10.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-11.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-12.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-1-13.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
 
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-1.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-2.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-3.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-4.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-5.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-6.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-7.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-8.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-9.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-10.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-11.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-12.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-13.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-14.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-15.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-16.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-17.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-2-18.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-3-1.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-4-1.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-4-2.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-4-3.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-5-1.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-6-1.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-6-2.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-7-1.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
         <div class="image">
           <img
             src="https://manic-scroll-images.alanwsmith.com/images/scroll-8-1.png"
+            alt="I'm still working on getting alt text for all of these"
           />
         </div>
       </div>
