--- a/site/index.html
+++ b/site/index.html
@@ -84,7 +84,7 @@
     />
     <style>
       body {
-        background-color: #111;
+        background-color: #333;
         color: #bbd3d3;
         margin: 0;
         padding: 0;
@@ -95,18 +95,16 @@
       }
       header {
         padding-top: 18px;
-        padding-bottom: 4px;
         width: 100%;
-        max-width: 64ch;
+        max-width: 68ch;
         margin: 0 auto;
       }
       main {
         width: 90vw;
         max-width: 1200px;
         margin: 0 auto;
-        padding-top: 40px;
       }
-      @media (max-width: 900px) {
+      @media (max-width: 1000px) {
         main {
           width: 98vw;
           margin: 0 auto;
@@ -146,17 +144,21 @@
       <a href="https://links.alanwsmith.com">links</a> ~
       <a href="https://podcast.alanwsmith.com/">podcast</a>
       <hr />
-      <p>
-        In Nov. 2017, I had a full-blown bipolar manic episode. For two weeks, I
-        ran around my house naked recording audio and video and taking notes
-        about my plans to fix the world. These are a few of the notes.
-      </p>
-      <p>
-        This is not a cohesive, edited piece. It&apos;s not something crafted
-        for a movie sequence. It the raw scribblings of someone in the throws of
-        mania. If you&apos;re interested in seeing what that really looks like,
-        this is it.
-      </p>
+      <div>
+        <p>
+          In Nov. 2017, I had a full-blown manic bipolar episode. For two weeks,
+          I ran around my house naked recording audio and video and taking notes
+          about my plans to fix the world. These notes are part of that. They
+          were also an attempt to stop talking and fight back against the
+          &quot;pressure to talk&quot; that comes with mania.
+        </p>
+        <p>
+          This is not a cohesive, edited piece. It&apos;s not something crafted
+          for a movie sequence. It the raw scribblings of someone in the throws
+          of mania. If you&apos;re interested in seeing what that actualy looks
+          like, this is it.
+        </p>
+      </div>
     </header>
     <main>
       <div>
