Updated the intro

--- a/site/index.html
+++ b/site/index.html
@@ -154,9 +154,10 @@
         </p>
         <p>
           This is not a cohesive, edited piece. It&apos;s not something crafted
-          for a movie sequence. It the raw scribblings of someone in the throws
-          of mania. If you&apos;re interested in seeing what that actualy looks
-          like, this is it.
+          for a movie sequence with dramatic music and a profound epiphany at
+          the end. It the raw scribbling of someone in the throws of mania. If
+          you&apos;re interested in seeing what that actually looks like, this
+          is it.
         </p>
       </div>
     </header>
